--- a/templates/registration/sign-up.html.twig
+++ b/templates/registration/sign-up.html.twig
@@ -1,12 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Acceder - Stockify{% endblock %}
+{% block title %}Registro - Stockify{% endblock %}
 
 {% block body %}
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Acceder - Stockify</title>
+        <title>Registro - Stockify</title>
       
         <link rel="shortcut icon" href="assets/images/favicon.ico" />
         <link rel="stylesheet" href="assets/css/backend-plugin.min.css">
@@ -33,41 +33,25 @@
                                     <div class="d-flex align-items-center auth-content">
                                         <div class="col-lg-7 align-self-center">
                                             <div class="p-3">
-                                                <h2 class="mb-2">Acceder</h2>
-                                                <form method="post">
-
-                                                    {% if error %}
-                                                        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                                    {% endif %}
-                                                    {% if app.user %}
-                                                        <div class="mb-3">
-                                                            Estás logueado como {{ app.user.username }}, <a href="{{ path('app_logout') }}">Cerrar sesión</a>
-                                                        </div>
-                                                    {% endif %}
-
+                                                <h2 class="mb-2">Nuevo registro</h2>
+                                                {{ form_start(registrationForm) }}
                                                     <div class="row">
                                                         <div class="col-lg-12">
                                                             <div class="floating-label form-group">
-                                                                <label>Usuario</label>
-                                                                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class=" floating-input form-control" autocomplete="username" required autofocus>
+                                                                {{ form_row(registrationForm.username) }}
                                                             </div>
                                                         </div>
                                                         <div class="col-lg-12">
                                                             <div class="floating-label form-group">
-                                                                <label>Contraseña</label>
-                                                                <input type="password" name="password" id="inputPassword" class="floating-input form-control" autocomplete="current-password" required>
+                                                                {{ form_row(registrationForm.plainPassword) }}
                                                             </div>
                                                         </div>   
                                                     </div>
-                                                    
-                                                    <button type="submit" class="btn btn-primary">Acceder</button>
+                                                    <button type="submit" class="btn btn-primary">Crear cuenta</button>
+                                                    {{ form_end(registrationForm) }}
                                                     <p class="mt-3">
-                                                        Crear una cuenta <a href="{{ path('app_register')}}" class="text-primary">Registrarse</a>
+                                                        ¿Ya tienes una cuenta? <a href="{{ path('app_login') }}" class="text-primary">Accede a Stockify</a>
                                                     </p>
-
-                                                    <input type="hidden" name="_csrf_token"
-                                                        value="{{ csrf_token('authenticate') }}"
-                                                    >
                                                 </form>
                                             </div>
                                         </div>
@@ -82,12 +66,9 @@
                 </div>
             </section>
         </div>
-
         <!-- Backend Bundle JavaScript -->
         <script src="assets/js/backend-bundle.min.js"></script>
     
         <!-- app JavaScript -->
         <script src="assets/js/app.js"></script>
-    </body>
-</html>
 {% endblock %}
