--- a/templates/product/products.html.twig
+++ b/templates/product/products.html.twig
@@ -73,7 +73,7 @@
                                 <div>
                                     <h4 class="mb-3">Productos</h4>
                                 </div>
-                                <a href="add-product.html" class="btn btn-primary add-list">
+                                <a href="{{path('add-product')}}" class="btn btn-primary add-list">
                                     <i class="las la-plus mr-3"></i>Nuevo producto
                                 </a>
                             </div>
@@ -91,26 +91,28 @@
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        {% for product in products %}
                                         <tr>
-                                            <td class="text-left">Accelerate FIFA Pro</td>
-                                            <td class="text-left">1</td>
-                                            <td class="text-left">Balones de fútbol</td>
-                                            <td class="text-center">10</td>
+                                            <td class="text-left">{{ product.name }}</td>
+                                            <td class="text-left">{{ product.id }}</td>
+                                            <td class="text-left">{{ product.category.name }}</td>
+                                            <td class="text-center">{{ product.stock }}</td>
                                             <td class="text-right">
-                                                <a class="badge bg-danger" data-toggle="tooltip" data-placement="top" title="" data-original-title="Eliminar stock" href="#">
+                                                <a class="badge bg-danger" data-toggle="tooltip" data-placement="top" title="" data-original-title="Eliminar stock" href="{{product.id}}">
                                                     <i class="las la-minus"></i>
                                                 </a>
-                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Añadir stock" href="#">
+                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Añadir stock" href="{{product.id}}">
                                                     <i class="las la-plus"></i>
                                                 </a>
-                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Histórico" href="#">
+                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Histórico" href="{{product.id}}">
                                                     <i class="las la-history"></i>
                                                 </a>
-                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="#">
+                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="{{product.id}}">
                                                     <i class="ri-pencil-line"></i>
                                                 </a>
                                             </td>
                                         </tr>
+                                        {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
