--- a/templates/user/users.html.twig
+++ b/templates/user/users.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Categorías - Stockify{% endblock %}
+{% block title %}Usuarios - Stockify{% endblock %}
 
 {% block body %}
     <head>
@@ -44,7 +44,7 @@
                                     <span class="ml-4">Productos</span>
                                 </a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="{{path('categories')}}" class="svg-icon">                        
                                     <svg class="svg-icon" id="p-dash3" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                         <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -52,7 +52,7 @@
                                     <span class="ml-4">Categorías</span>
                                 </a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="{{path('users')}}" class="svg-icon">                        
                                     <svg class="svg-icon" id="p-dash8" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
@@ -71,10 +71,10 @@
                         <div class="col-lg-12">
                             <div class="d-flex flex-wrap flex-wrap align-items-center justify-content-between mb-4">
                                 <div>
-                                    <h4 class="mb-3">Categorías</h4>
+                                    <h4 class="mb-3">Usuarios</h4>
                                 </div>
-                                <a href="{{path('add-category')}}" class="btn btn-primary add-list">
-                                    <i class="las la-plus mr-3"></i>Nueva categoría
+                                <a href="{{path('add-user')}}" class="btn btn-primary add-list">
+                                    <i class="las la-plus mr-3"></i>Nuevo usuario
                                 </a>
                             </div>
                         </div>
@@ -89,21 +89,17 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for category in categories %}
+                                        {% for user in users %}
                                         <tr>
-                                            <td class="text-left">{{ category.name }}</td>
-                                            <td class="text-center">{{ category.ID }}</td>
-                                            <td class="text-center">  
-                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="{{category.id}}">
+                                            <td class="text-left">{{ user.username }}</td>
+                                            <td class="text-center">{{ user.id }}</td>
+                                            <td class="text-center">
+                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="{{user.id}}">
                                                     <i class="ri-pencil-line"></i>
-                                                </a>
-
-                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Eliminar" href="{{category.id}}">
-                                                    <i class="las la-times"></i>
                                                 </a>
                                             </td>
                                         </tr>
-                                    {% endfor %}
+                                        {% endfor %}
                                     </tbody>
                                 </table>
                             </div>
