--- a/templates/user/add_user.html.twig
+++ b/templates/user/add_user.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nuevo producto - Stockify{% endblock %}
+{% block title %}Nuevo usuario - Stockify{% endblock %}
 
 {% block body %} 
         <!-- Favicon -->
@@ -40,7 +40,7 @@
                                     <span class="ml-4">Productos</span>
                                 </a>
                             </li>
-                            <li class="active">
+                            <li>
                                 <a href="{{path('categories')}}" class="svg-icon">                        
                                     <svg class="svg-icon" id="p-dash3" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="9" y="9" width="13" height="13" rx="2" ry="2"></rect>
                                         <path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"></path>
@@ -48,7 +48,7 @@
                                     <span class="ml-4">Categorías</span>
                                 </a>
                             </li>
-                            <li>
+                            <li class="active">
                                 <a href="{{path('users')}}" class="svg-icon">                        
                                     <svg class="svg-icon" id="p-dash8" width="20" height="20" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                         <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path><circle cx="9" cy="7" r="4"></circle><path d="M23 21v-2a4 4 0 0 0-3-3.87"></path><path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
@@ -67,18 +67,19 @@
                         <div class="col-lg-12">
                             <div class="d-flex flex-wrap flex-wrap align-items-center justify-content-between mb-4">
                                 <div>
-                                    <h4 class="mb-3">Nueva categoría</h4>
+                                    <h4 class="mb-3">Nuevo usuario</h4>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-12">
-                            {{ form_start(categoryForm)}}
+                            {{ form_start(editUserForm)}}
                                 <div class="row">
-                                    <div class="col-md-12">    
+                                    <div class="col-md-12">
                                         <!-- CON ERROR 
                                         <div class="form-group has-error has-danger">-->                 
                                         <div class="form-group">
-                                            {{ form_row(categoryForm.name) }}
+                                            {{ form_row(editUserForm.username) }}
+                                            {{ form_row(editUserForm.password) }}
                                             <!-- CON ERROR  
                                             <div class="help-block with-errors">
                                                 <ul class="list-unstyled">
@@ -91,7 +92,7 @@
                                         <button type="submit" class="btn btn-primary mr-2">Añadir categoría</button>
                                     </div>
                                 </div>
-                            {{ form_end(categoryForm) }}
+                            {{ form_end(editUserForm) }}
                         </div> 
                     </div>
                 </div>
