--- a/templates/product/products.html.twig
+++ b/templates/product/products.html.twig
@@ -107,7 +107,7 @@
                                                 <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Histórico" href="{{product.id}}">
                                                     <i class="las la-history"></i>
                                                 </a>
-                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="{{product.id}}">
+                                                <a class="badge bg-warning" data-toggle="tooltip" data-placement="top" title="" data-original-title="Editar" href="{{path('edit-product', {id: product.id})}}">
                                                     <i class="ri-pencil-line"></i>
                                                 </a>
                                             </td>
