--- a/templates/product/products.html.twig
+++ b/templates/product/products.html.twig
@@ -103,7 +103,7 @@
                                                     <i class="las la-minus"></i>
                                                 </a>
                                                 {# Al pulsar en Añadir stock, recalcularemos stock según ponga número positivo o negativo #}
-                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Añadir stock" href="{{product.id}}">
+                                                <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Añadir stock" href="{{path('edit-stock', {id: product.id})}}">
                                                     <i class="las la-plus"></i>
                                                 </a>
                                                 <a class="badge bg-success" data-toggle="tooltip" data-placement="top" title="" data-original-title="Histórico" href="{{product.id}}">
