adding if stock < 0 and fixes

--- a/templates/category/add_category.html.twig
+++ b/templates/category/add_category.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Nuevo producto - Stockify{% endblock %}
+{% block title %}Nueva categoría - Stockify{% endblock %}
 
 {% block body %} 
         <!-- Favicon -->
